# geant4-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  installation_guide.md  requirements.txt  run.py
app/: __init__.py  config.py  main.py
app/api/: __init__.py  geant4.py  geometry.py  physics.py  results.py  simulations.py  sources.py  websocket.py
app/core/: __init__.py  event_manager.py  geant4_executor.py  geometry_builder.py  physics_builder.py  result_collector.py  simulation_engine.py  source_builder.py
app/core/geant4_app/: CMakeLists.txt  build.bat  build.sh
app/core/geant4_app/B2a/: API_GUIDE.md  CMakeLists.txt  RUN_B2A.md  SETUP_MACROS.md  build.bat  build.sh  exampleB2a.cc
app/core/geant4_app/B2a/include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SteppingAction.hh  TrackerHit.hh  TrackerSD.hh
app/core/geant4_app/B2a/src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SteppingAction.cc  TrackerHit.cc  TrackerSD.cc
app/core/geant4_app/include/: ActionInitialization.hh  Analysis.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  SensitiveDetector.hh  SteppingAction.hh
app/core/geant4_app/src/: ActionInitialization.cc  Analysis.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  SensitiveDetector.cc  SteppingAction.cc  main.cc
app/models/: __init__.py  geometry.py  particle.py  physics.py  results.py  simulation.py
examples/: basic_simulation.py  medical_dosimetry.py  websocket_client.html
